--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                             <div id="seconds" class="counter-block-number">00</div>
                             <div class="counter-block-label">Secondi</div>
                         </div>
+
+                        <h1 id="message">
+                            
+                        </h1>
+                        
                     </div>
                 </div>
                 <!-- Albero -->
